feat: adiciona Fase 7b — comentários e curtidas no feed
- Comentario e Curtida (migration V10): primeiras tabelas que referenciam
  post em vez de só usuario; usuario_id nelas diz quem escreveu/curtiu,
  nunca quem pode ler
- Curtida em toggle: a linha existir é a curtida, curtir de novo apaga;
  unique(post_id, usuario_id) no banco, e o duplo clique que esbarra na
  constraint é ignorado em vez de virar 500 (mesmo tratamento da corrida
  de login da Fase 6)
- POST /feed/posts/{postId}/comentarios e /curtir: primeiros endpoints em
  que usar o ID de um recurso alheio é a função; post inexistente dá 404
  e a autoria vem sempre do login, nunca do cliente
- EndpointsComIdIT: auditoria atualizada (16 endpoints, 3 com ID) e teste
  travando o acesso cruzado permitido, pra não ser "corrigido" depois
- Primeiro @Query do projeto: contagem de curtidas agrupada por post;
  listarFeed monta o feed com 5 consultas fixas, sem N+1, e passa a
  receber o usuário atual por causa de curtidoPorMim
- Erro de validação do comentário aparece só no post em que o usuário
  errou, não em todas as caixas do feed
- mvn verify: 81/81 passando (36 unitários + 45 integração)
- README atualizado

Co-Authored-By: Claude Opus 5.5 <noreply@anthropic.com>