@@ -2,11 +2,18 @@ package com.corpoforte.tracker.feed;
 
 import com.corpoforte.tracker.usuario.Usuario;
 import com.corpoforte.tracker.usuario.UsuarioRepository;
+import org.springframework.dao.DataIntegrityViolationException;
+import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
+import org.springframework.web.server.ResponseStatusException;
 
 import java.time.LocalDateTime;
+import java.util.HashSet;
+import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.Optional;
+import java.util.Set;
 import java.util.stream.Collectors;
 
 /**
@@ -17,10 +24,15 @@ import java.util.stream.Collectors;
 public class PostService {
 
     private final PostRepository postRepository;
+    private final ComentarioRepository comentarioRepository;
+    private final CurtidaRepository curtidaRepository;
     private final UsuarioRepository usuarioRepository;
 
-    public PostService(PostRepository postRepository, UsuarioRepository usuarioRepository) {
+    public PostService(PostRepository postRepository, ComentarioRepository comentarioRepository,
+                        CurtidaRepository curtidaRepository, UsuarioRepository usuarioRepository) {
         this.postRepository = postRepository;
+        this.comentarioRepository = comentarioRepository;
+        this.curtidaRepository = curtidaRepository;
         this.usuarioRepository = usuarioRepository;
     }
 
@@ -28,22 +40,107 @@ public class PostService {
         return postRepository.save(new Post(usuarioId, texto, LocalDateTime.now()));
     }
 
+    public Comentario comentar(Long postId, Long usuarioId, String texto) {
+        exigirPostExistente(postId);
+        return comentarioRepository.save(new Comentario(postId, usuarioId, texto, LocalDateTime.now()));
+    }
+
+    /**
+     * Curtir de novo descurte: o toggle nao tem estado proprio, e' so' a
+     * linha existir ou nao.
+     *
+     * O catch e' o caso do duplo clique (ou duas abas): as duas
+     * requisicoes passam pelo findByPostIdAndUsuarioId sem achar nada e as
+     * duas tentam inserir; a segunda esbarra no unique(post_id, usuario_id)
+     * e viraria 500 sem tratamento. Aqui nao ha o que fazer alem de
+     * ignorar - o estado final desejado ("este usuario curtiu este post")
+     * ja e' exatamente o que a outra requisicao acabou de gravar. Mesmo
+     * tratamento que UsuarioAtualService da pra corrida no primeiro login
+     * (Fase 6).
+     */
+    public void alternarCurtida(Long postId, Long usuarioId) {
+        exigirPostExistente(postId);
+
+        Optional<Curtida> existente = curtidaRepository.findByPostIdAndUsuarioId(postId, usuarioId);
+        if (existente.isPresent()) {
+            curtidaRepository.delete(existente.get());
+            return;
+        }
+
+        try {
+            curtidaRepository.save(new Curtida(postId, usuarioId, LocalDateTime.now()));
+        } catch (DataIntegrityViolationException e) {
+            // ja curtido por uma requisicao concorrente - nada a fazer
+        }
+    }
+
     /**
      * Junta os posts (de todo mundo, de proposito - ver Post.java) com o
-     * nome de cada autor, buscando os Usuario dos usuarioId distintos numa
-     * unica consulta (sem N+1) - mesmo padrao que TreinoDoDiaService usa
-     * pra juntar TreinoItem com o catalogo de Exercicio.
+     * nome de cada autor, os comentarios e a contagem de curtidas.
+     *
+     * Sao 5 consultas de numero fixo, independente de quantos posts ou
+     * comentarios existam - nenhuma dentro de laco (mesmo cuidado com N+1
+     * que TreinoDoDiaService tem ao juntar TreinoItem com o catalogo):
+     * posts, comentarios de todos eles, autores distintos (de post E de
+     * comentario, numa busca so'), contagem de curtidas agrupada por post
+     * e as curtidas do proprio usuario entre os posts exibidos.
      */
-    public List<PostView> listarFeed() {
+    public List<PostView> listarFeed(Long usuarioIdAtual) {
         List<Post> posts = postRepository.findAllByOrderByCriadoEmDesc();
+        if (posts.isEmpty()) {
+            return List.of();
+        }
 
-        List<Long> usuarioIds = posts.stream().map(Post::getUsuarioId).distinct().toList();
-        Map<Long, String> nomePorUsuarioId = usuarioRepository.findAllById(usuarioIds).stream()
-                .collect(Collectors.toMap(Usuario::getId, Usuario::getNome));
+        List<Long> postIds = posts.stream().map(Post::getId).toList();
+        List<Comentario> comentarios = comentarioRepository.findByPostIdInOrderByCriadoEmAsc(postIds);
+
+        Map<Long, String> nomePorUsuarioId = nomesDosAutores(posts, comentarios);
+
+        Map<Long, List<ComentarioView>> comentariosPorPost = comentarios.stream()
+                .collect(Collectors.groupingBy(Comentario::getPostId, LinkedHashMap::new,
+                        Collectors.mapping(comentario -> new ComentarioView(comentario.getId(),
+                                nomePorUsuarioId.get(comentario.getUsuarioId()),
+                                comentario.getTexto(), comentario.getCriadoEm()), Collectors.toList())));
+
+        Map<Long, Long> curtidasPorPost = curtidaRepository.contarPorPost(postIds).stream()
+                .collect(Collectors.toMap(CurtidaRepository.ContagemPorPost::getPostId,
+                        CurtidaRepository.ContagemPorPost::getTotal));
+
+        Set<Long> curtidosPorMim = curtidaRepository.findByUsuarioIdAndPostIdIn(usuarioIdAtual, postIds).stream()
+                .map(Curtida::getPostId)
+                .collect(Collectors.toSet());
 
         return posts.stream()
                 .map(post -> new PostView(post.getId(), nomePorUsuarioId.get(post.getUsuarioId()),
-                        post.getTexto(), post.getCriadoEm()))
+                        post.getTexto(), post.getCriadoEm(),
+                        curtidasPorPost.getOrDefault(post.getId(), 0L),
+                        curtidosPorMim.contains(post.getId()),
+                        comentariosPorPost.getOrDefault(post.getId(), List.of())))
                 .toList();
+    }
+
+    /** Autor de post e autor de comentario saem da mesma busca: quem
+     * comentou no feed quase sempre tambem aparece como autor de algum
+     * post, e duas buscas separadas trariam as mesmas linhas duas vezes. */
+    private Map<Long, String> nomesDosAutores(List<Post> posts, List<Comentario> comentarios) {
+        Set<Long> autorIds = new HashSet<>();
+        posts.forEach(post -> autorIds.add(post.getUsuarioId()));
+        comentarios.forEach(comentario -> autorIds.add(comentario.getUsuarioId()));
+
+        return usuarioRepository.findAllById(autorIds).stream()
+                .collect(Collectors.toMap(Usuario::getId, Usuario::getNome));
+    }
+
+    /**
+     * 404 (nao 400/500) pra post inexistente, igual
+     * TreinoDoDiaService.alternarConclusao: postId vem do cliente, e a
+     * resposta pra um ID que nao existe nao deve vazar detalhe interno.
+     * Aqui NAO se checa dono do post - comentar e curtir post dos outros e'
+     * a funcao, ver EndpointsComIdIT.
+     */
+    private void exigirPostExistente(Long postId) {
+        if (!postRepository.existsById(postId)) {
+            throw new ResponseStatusException(HttpStatus.NOT_FOUND);
+        }
     }
 }
